Add algorithm and code block support

--- a/data/chapter02.tex
+++ b/data/chapter02.tex
@@ -5,3 +5,23 @@
 
 \subsection{第一小节}
 正文内容。
+
+\section{算法示例}
+
+\begin{algorithm}[H]
+  \caption{示例算法}
+  \KwIn{输入数据}
+  \KwOut{输出结果}
+  初始化\;
+  \While{条件成立}{
+    执行操作\;
+  }
+  \Return 结果\;
+\end{algorithm}
+
+\section{代码示例}
+
+\begin{lstlisting}[language=Python, caption=Python示例]
+def hello():
+    print("Hello World")
+\end{lstlisting}
